<resources>
    <string name="app_name" translatable="false">GroupMatch</string>
    <string name="app_log_id" translatable="false">GroupMatch</string>

    <!--ConnectionRoleFragment UI Elements-->
    <string name="fragment_connection_role_server_button">Server</string>
    <string name="fragment_connection_role_client_button">Client</string>

    <!--BottomNavigationMenut UI Elements-->
    <string name="bottom_navigation_menu_calendar_item">Calendar</string>
    <string name="bottom_navigation_menu_search_item">Search</string>
    <string name="bottom_navigation_menu_settings_item">Settings</string>


    <!-- Server -->

    <string name="actions">Actions</string>
    <string name="send_timestamp">Send Timestamp</string>
    <string name="restart">Restart</string>

    <!-- Client -->

    <string name="scanning">Scanning</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="ble_servers">BLE Servers</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="messages">Messages</string>
    <string name="send">Send</string>
    <string name="request_timestamp">Request Timestamp</string>

    <!-- Logs -->

    <string name="logs">Logs</string>
    <string name="clear">Clear</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
