<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/main_activity">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/calendarFragment"
            android:checked="true"
            android:icon="@drawable/ic_calendar"
            android:title="@string/bottom_navigation_menu_calendar_item" />
        <item
            android:id="@id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/bottom_navigation_menu_search_item" />
        <item
            android:id="@id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/bottom_navigation_menu_settings_item" />
    </group>
</menu>